# vm-manager

./: .gitignore  LICENSE  README.md  \  build-deb.sh  build.sh  install.sh  makefile  package-lock.json  pyproject.toml  start.sh
api/: __main__.py  package-lock.json  package.json  pyproject.toml  server.js  vm_manager.db  wsgi.py
api/app/: __init__.py  config.py
api/app/database/: database.py  networks.py
api/app/models/: instance_modules.py  models.py  network_modules.py
api/app/routes/: auth_routes.py  instance_routes.py  network_routes.py  volume_routes.py
api/app/services/: instance_services.py  network_services.py  volume_services.py
api/app/static/: database.py
api/controllers/: machineController.js
api/routes/: machineRoutes.js
debian/: changelog  control  copyright  install  postinst  prerm  rules  vm-manager.service
python/: api.py  requirements.txt
systemd/: vm-manager.service
web/: package-lock.json  package.json
web/src/: App.css  App.jsx  main.jsx
web/src/components/AccessBox/: AccessBox.jsx
web/src/components/DashboardContainer/: DashboardContainer.css  DashboardContainer.jsx
web/src/components/DescBar/: DescBar.css  DescBar.jsx
web/src/components/Filter/: Filter.css  Filter.jsx
web/src/components/InfoBox/: InfoBox.css  InfoBox.jsx
web/src/components/Instance/: Instance.css  Instance.jsx
web/src/components/InstanceCard/: InstanceCard.css  InstanceCard.jsx  InstanceCard.tsx
web/src/components/NavBar/: Navbar.css  Navbar.jsx
web/src/components/NetworkCard/: NetworkCard.css  (+1 more)
web/src/context/: AuthContext.jsx
(+31 files in other folders)
